# batchGradientDescent

./: BGD.h  CMakeLists.txt  README.md  main.cpp
